vpc-creation.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "AWS CloudFormation Template to build a VPC creation",
	"Parameters": {
		"VPCCIDR": {
			"Default": "10.150.0.0/16",
			"Description": "CIDR block to be used to create the  VPC",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid private IP range."
		},
		"AWSPRODPUBLICSUBNET1": {
			"Default": "10.150.1.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODPUBLICSUBNET1",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSPRODPUBLICSUBNET2": {
			"Default": "10.150.2.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODPUBLICSUBNET2",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSPRODPRIVATESUBNET1": {
			"Default": "10.150.3.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODPRIVATESUBNET1",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSPRODPRIVATESUBNET2": {
			"Default": "10.150.4.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODPRIVATESUBNET2",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSPRODPRIVATESUBNET3": {
			"Default": "10.150.5.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODPRIVATESUBNET3",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSPRODPRIVATESUBNET4": {
			"Default": "10.150.6.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODPRIVATESUBNET4",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSPRODTESTPRIVATESUBNET1": {
			"Default": "10.150.7.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSPRODTESTPRIVATESUBNET1",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSUATPUBLICSUBNET1": {
			"Default": "10.150.8.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSUATPUBLICSUBNET1",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSUATPRIVATESUBNET1": {
			"Default": "10.150.9.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSUATPRIVATESUBNET1",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSUATPRIVATESUBNET2": {
			"Default": "10.150.10.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSUATPRIVATESUBNET2",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		},
		"AWSUATPRIVATESUBNET3": {
			"Default": "10.150.11.0/24",
			"Description": "CIDR block to be used to create the Subnet: AWSUATPRIVATESUBNET3",
			"Type": "String",
			"AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
			"ConstraintDescription": "Must be a valid  IP range within the VPC CIDR block."
		}
	},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": {
					"Ref": "VPCCIDR"
				},
				"EnableDnsSupport": "true",
				"EnableDnsHostnames": "true",
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSVPC"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODPUBLICSUBNET1"
				},
				"MapPublicIpOnLaunch" : "true",
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPUBLICSUBNET1"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODPUBLICSUBNET2"
					},
				"MapPublicIpOnLaunch" : "true",	
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPUBLICSUBNET2"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet3": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODPRIVATESUBNET1"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPRIVATESUBNET1"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet4": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODPRIVATESUBNET2"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPRIVATESUBNET2"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet5": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODPRIVATESUBNET3"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPRIVATESUBNET3"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet6": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODPRIVATESUBNET4"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPRIVATESUBNET4"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"Subnet7": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSPRODTESTPRIVATESUBNET1"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODTESTPRIVATESUBNET1"
					},
					{
						"Key": "Environment",
						"Value": "PRODTEST"
					}
				]
			}
		},
		"Subnet8": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSUATPUBLICSUBNET1"
				},
				"MapPublicIpOnLaunch" : "true",
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPUBLICSUBNET1"
					},
					{
						"Key": "Environment",
						"Value": "UAT"
					}
				]
			}
		},
		"Subnet9": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSUATPRIVATESUBNET1"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPRIVATESUBNET1"
					},
					{
						"Key": "Environment",
						"Value": "UAT"
					}
				]
			}
		},
		"Subnet10": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"1",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSUATPRIVATESUBNET2"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPRIVATESUBNET2"
					},
					{
						"Key": "Environment",
						"Value": "UAT"
					}
				]
			}
		},
		"Subnet11": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": {
					"Fn::Select": [
						"0",
						{
							"Fn::GetAZs": ""
						}
					]
				},
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": {
					"Ref": "AWSUATPRIVATESUBNET3"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPRIVATESUBNET3"
					},
					{
						"Key": "Environment",
						"Value": "UAT"
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSIGW"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"AWSPRODPUBLICROUTETABLE": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPUBLICROUTETABLE"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"AWSPRODPRIVATEROUTETABLE": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPRIVATEROUTETABLE"
					},
					{
						"Key": "Environment",
						"Value": "PROD"
					}
				]
			}
		},
		"AWSUATPUBLICROUTETABLE": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPUBLICROUTETABLE"
					},
					{
						"Key": "Environment",
						"Value": "UAT"
					}
				]
			}
		},
		"AWSUATPRIVATEROUTETABLE": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPRIVATEROUTETABLE"
					},
					{
						"Key": "Environment",
						"Value": "UAT"
					}
				]
			}
		},
		
		
		"EIP1": {
			"Type": "AWS::EC2::EIP",
			"DependsOn": [
				"InternetGateway"
			],
			"Properties": {
				"Domain": "vpc"
			}
		},
		"NAT": {
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": [
						"EIP1",
						"AllocationId"
					]
				},
				"SubnetId": {
					"Ref": "Subnet1"
				}
			}
		},
		"PRODPrivateRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "AWSPRODPRIVATEROUTETABLE"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NAT"
				}
			}
		},
		"UATPrivateRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "AWSUATPRIVATEROUTETABLE"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NAT"
				}
			}
        },
        "PRODPublicRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "AWSPRODPUBLICROUTETABLE"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"UATPublicRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "AWSUATPUBLICROUTETABLE"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"SubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet1"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPUBLICROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet2"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPUBLICROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet3"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation4": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet4"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation5": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet5"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation6": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet6"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation7": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet7"
				},
				"RouteTableId": {
					"Ref": "AWSPRODPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation8": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet8"
				},
				"RouteTableId": {
					"Ref": "AWSUATPUBLICROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation9": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet9"
				},
				"RouteTableId": {
					"Ref": "AWSUATPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation10": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet10"
				},
				"RouteTableId": {
					"Ref": "AWSUATPRIVATEROUTETABLE"
				}
			}
		},
		"SubnetRouteTableAssociation11": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet11"
				},
				"RouteTableId": {
					"Ref": "AWSUATPRIVATEROUTETABLE"
				}
			}
		},
		"AWSPRODPUBLICNACL": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPUBLICNACL"
					}
				]
			}
		},
		"AWSPRODPRIVATENACL": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSPRODPRIVATENACL"
					}
				]
			}
		},
		"AWSUATPUBLICNACL": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPUBLICNACL"
					}
				]
			}
		},
		"AWSUATPRIVATENACL": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
						"Key": "Application",
						"Value": {
							"Ref": "AWS::StackId"
						}
					},
					{
						"Key": "Name",
						"Value": "AWSUATPRIVATENACL"
					}
				]
			}
        },
        
		"AWSPRODPUBLICNACLegress" : {
			   "Type" : "AWS::EC2::NetworkAclEntry",
			   "Properties" : {
				  "NetworkAclId" : { "Ref" : "AWSPRODPUBLICNACL" },
				  "RuleNumber" : "100",
				  "Protocol" : "-1",
				  "RuleAction" : "allow",
				  "Egress" : "true",
				  "CidrBlock" : "0.0.0.0/0",
				  "PortRange" : { "From" : "1", "To" : "65535" }
			   }
			},
		"AWSPRODPUBLICNACLingress" : {
				"Type" : "AWS::EC2::NetworkAclEntry",
				"Properties" : {
				   "NetworkAclId" : { "Ref" : "AWSPRODPUBLICNACL" },
				   "RuleNumber" : "100",
				   "Protocol" : "-1",
				   "RuleAction" : "allow",
				   "Egress" : "false",
				   "CidrBlock" : "0.0.0.0/0",
				   "PortRange" : { "From" : "1", "To" : "65535" }
				}
			 },
			 "AWSPRODPRIVATENACLegress" : {
				"Type" : "AWS::EC2::NetworkAclEntry",
				"Properties" : {
				   "NetworkAclId" : { "Ref" : "AWSPRODPRIVATENACL" },
				   "RuleNumber" : "100",
				   "Protocol" : "-1",
				   "RuleAction" : "allow",
				   "Egress" : "true",
				   "CidrBlock" : "0.0.0.0/0",
				   "PortRange" : { "From" : "1", "To" : "65535" }
				}
			 },
		 "AWSPRODPRIVATENACLingress" : {
				 "Type" : "AWS::EC2::NetworkAclEntry",
				 "Properties" : {
					"NetworkAclId" : { "Ref" : "AWSPRODPRIVATENACL" },
					"RuleNumber" : "100",
					"Protocol" : "-1",
					"RuleAction" : "allow",
					"Egress" : "false",
					"CidrBlock" : "0.0.0.0/0",
					"PortRange" : { "From" : "1", "To" : "65535" }
				 }
			  },
			 "AWSUATPUBLICNACLegress" : {
				"Type" : "AWS::EC2::NetworkAclEntry",
				"Properties" : {
				   "NetworkAclId" : { "Ref" : "AWSUATPUBLICNACL" },
				   "RuleNumber" : "100",
				   "Protocol" : "-1",
				   "RuleAction" : "allow",
				   "Egress" : "true",
				   "CidrBlock" : "0.0.0.0/0",
				   "PortRange" : { "From" : "1", "To" : "65535" }
				}
			 },
		 "AWSUATPUBLICNACLingress" : {
				 "Type" : "AWS::EC2::NetworkAclEntry",
				 "Properties" : {
					"NetworkAclId" : { "Ref" : "AWSUATPUBLICNACL" },
					"RuleNumber" : "100",
					"Protocol" : "-1",
					"RuleAction" : "allow",
					"Egress" : "false",
					"CidrBlock" : "0.0.0.0/0",
					"PortRange" : { "From" : "1", "To" : "65535" }
				 }
			  },
			  "AWSUATPRIVATENACLegress" : {
				"Type" : "AWS::EC2::NetworkAclEntry",
				"Properties" : {
				   "NetworkAclId" : { "Ref" : "AWSUATPRIVATENACL" },
				   "RuleNumber" : "100",
				   "Protocol" : "-1",
				   "RuleAction" : "allow",
				   "Egress" : "true",
				   "CidrBlock" : "0.0.0.0/0",
				   "PortRange" : { "From" : "1", "To" : "65535" }
				}
			 },
		 "AWSUATPRIVATENACLingress" : {
				 "Type" : "AWS::EC2::NetworkAclEntry",
				 "Properties" : {
					"NetworkAclId" : { "Ref" : "AWSUATPRIVATENACL" },
					"RuleNumber" : "100",
					"Protocol" : "-1",
					"RuleAction" : "allow",
					"Egress" : "false",
					"CidrBlock" : "0.0.0.0/0",
					"PortRange" : { "From" : "1", "To" : "65535" }
				 }
			  },
		"Subnet1NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet1"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPUBLICNACL"
				}
			}
		},
		"Subnet2NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet2"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPUBLICNACL"
				}
			}
		},
		"Subnet3NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet3"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPRIVATENACL"
				}
			}
		},
		"Subnet4NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet4"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPRIVATENACL"
				}
			}
		},
		"Subnet5NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet5"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPRIVATENACL"
				}
			}
		},
		"Subnet6NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet6"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPRIVATENACL"
				}
			}
		},
		"Subnet7NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet7"
				},
				"NetworkAclId": {
					"Ref": "AWSPRODPRIVATENACL"
				}
			}
		},
		"Subnet8NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet8"
				},
				"NetworkAclId": {
					"Ref": "AWSUATPUBLICNACL"
				}
			}
		},
		"Subnet9NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet9"
				},
				"NetworkAclId": {
					"Ref": "AWSUATPRIVATENACL"
				}
			}
		},
		"Subnet10NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet10"
				},
				"NetworkAclId": {
					"Ref": "AWSUATPRIVATENACL"
				}
			}
		},
		"Subnet11NetworkAclAssociation": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "Subnet11"
				},
				"NetworkAclId": {
					"Ref": "AWSUATPRIVATENACL"
				}
			}
		},
		"sgrds": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for RDS",
				"GroupName" : "AWSPRODDBSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSPRODDBSG"
				}]
			}
		},
		"sgappserver": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for App Server",
				"GroupName" : "AWSPRODAPPSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSPRODAPPSG"
				}]
			}
		},
		"sgAlb": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for load balancer",
				"GroupName" : "AWSPRODELBSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSPRODELBSG"
				}]
			}
		},
		"sgwebb": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for load balancer",
				"GroupName" : "AWSPRODWEBSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSPRODWEBSG"
				}]
			}
        },
        "sguatrds": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for RDS",
				"GroupName" : "AWSUATDBSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSUATDBSG"
				}]
			}
        },
        "sguatappserver": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for App Server",
				"GroupName" : "AWSUATAPPSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSUATAPPSG"
				}]
			}
		},
		"sguatweb": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for load balancer",
				"GroupName" : "AWSUATWEBSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSUATWEBSG"
				}]
			}
		},
        "sguatAlb": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Security group for load balancer",
				"GroupName" : "AWSUABSG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [{
					"Key": "Name",
					"Value": "AWSUABSG"
				}]
			}
		}
},		
	"Outputs": {
		"VpcId": {
			"Description": "VPCId of the newly created VPC",
			"Value": {
				"Ref": "VPC"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-VPCID"
				}
			}
		},
		"Subnet1Id": {
			"Description": "AWSPRODPUBLICSUBNET1 Subnet ID",
			"Value": {
				"Ref": "Subnet1"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODPUBLICSUBNET1"
				}
			}
		},
		"Subnet2Id": {
			"Description": "AWSPRODPUBLICSUBNET2 subnet ID",
			"Value": {
				"Ref": "Subnet2"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODPUBLICSUBNET2"
				}
			}
		},
		"Subnet3Id": {
			"Description": "AWSPRODPRIVATESUBNET1 subnet ID",
			"Value": {
				"Ref": "Subnet3"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODPRIVATESUBNET1"
				}
			}
		},
		"Subnet4Id": {
			"Description": "AWSPRODPRIVATESUBNET2 Subnet ID",
			"Value": {
				"Ref": "Subnet4"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODPRIVATESUBNET2"
				}
			}
		},
		"Subnet5Id": {
			"Description": "AWSPRODPRIVATESUBNET3 Subnet ID",
			"Value": {
				"Ref": "Subnet5"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODPRIVATESUBNET3"
				}
			}
		},
		"Subnet6Id": {
			"Description": "AWSPRODPRIVATESUBNET4 Subnet ID",
			"Value": {
				"Ref": "Subnet6"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODPRIVATESUBNET4"
				}
			}
		},
		"Subnet7Id": {
			"Description": "AWSPRODTESTPRIVATESUBNET1 Subnet ID",
			"Value": {
				"Ref": "Subnet7"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODTESTPRIVATESUBNET1"
				}
			}
		},
		"Subnet8Id": {
			"Description": "AWSUATPUBLICSUBNET1 Subnet ID",
			"Value": {
				"Ref": "Subnet8"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATPUBLICSUBNET1"
				}
			}
		},
		"Subnet9Id": {
			"Description": "AWSUATPRIVATESUBNET1 Subnet ID",
			"Value": {
				"Ref": "Subnet9"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATPRIVATESUBNET1"
				}
			}
		},
		"Subnet10Id": {
			"Description": "AWSUATPRIVATESUBNET2 Subnet ID",
			"Value": {
				"Ref": "Subnet10"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATPRIVATESUBNET2"
				}
			}
		},
		"Subnet11Id": {
			"Description": "AWSUATPRIVATESUBNET3 Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATPRIVATESUBNET3"
				}
			}
		},
		"AWSPRODDBSG": {
			"Description": "AWSPRODDBSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODDBSG"
				}
			}
		},
		"AWSPRODAPPSG": {
			"Description": "AWSPRODAPPSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODAPPSG"
				}
			}
		},
		"AWSPRODELBSG": {
			"Description": "AWSPRODELBSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODELBSG"
				}
			}
		},
		"AWSPRODWEBSG": {
			"Description": "AWSPRODWEBSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSPRODWEBSG"
				}
			}
		},
		"AWSUATDBSG": {
			"Description": "AWSUATDBSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATDBSG"
				}
			}
		},
		"AWSUATAPPSG": {
			"Description": "AWSUATAPPSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATAPPSG"
				}
			}
		},
		"AWSUATWEBSG": {
			"Description": "AWSUATWEBSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUATWEBSG"
				}
			}
		},
		"AWSUABSG": {
			"Description": "AWSUABSG Subnet ID",
			"Value": {
				"Ref": "Subnet11"
			},
			"Export": {
				"Name": {
					"Fn::Sub": "${AWS::StackName}-AWSUABSG"
				}
			}
		}
    }
}
